source/linux/lfs/lfs_cross_toolchain/lfs_cross_build_tools/m4_make_err
  CC       bitrotate.o
In file included from /mnt/lfs/usr/include/stdlib.h:1159,
                 from ./stdlib.h:36,
                 from openat-priv.h:25,
                 from openat-proc.c:22:
/mnt/lfs/usr/include/bits/stdlib.h: In function 'wctomb':
/mnt/lfs/usr/include/bits/stdlib.h:86:3: error: #error "Assumed value of MB_LEN_MAX wrong"
   86 | # error "Assumed value of MB_LEN_MAX wrong"
      |   ^~~~~
  CC       c-ctype.o
  CC       c-stack.o
make[3]: *** [Makefile:2866: openat-proc.o] Error 1
make[3]: *** Waiting for unfinished jobs....
In file included from /mnt/lfs/usr/include/stdlib.h:1159,
                 from ./stdlib.h:36,
                 from c-stack.c:44:
/mnt/lfs/usr/include/bits/stdlib.h: In function 'wctomb':
/mnt/lfs/usr/include/bits/stdlib.h:86:3: error: #error "Assumed value of MB_LEN_MAX wrong"
